Still trying to get this to work, but I'm having my doubts at this point. I don't like the way this is forcing me to build stuff

--- a/OrchidCore/src/orchid/resources/data/wiki.yml
+++ b/OrchidCore/src/orchid/resources/data/wiki.yml
@@ -3,6 +3,6 @@ sections:
   - 'userManual'
   - 'developersGuide'
 wikiPages:
-  layout: geopattern2
+#  layout: geopattern2
   searchIndices:
     - 'wiki'
